--- a/index.html
+++ b/index.html
@@ -74,8 +74,13 @@
   </head>
   <body>
     <h1>Code<span>base</span></h1>
-    <p>Making mobile apps isn’t rocket science. It’s not even computer science. It’s logic, creativity, and knowing how to use the right tools. It’s something you can learn. And Codebase can help.</p>
-    <p>In our immersive iOS bootcamp in Savannah, Georgia, you’ll learn how to develop apps for iPhone and iPad using Apple’s newest programming language, Swift, in nine weeks. You’ll work hard, you’ll have a blast, and when it’s all over, you’ll have the skills to succeed as a junior iOS developer.</p>
+    <p>Making mobile apps isn’t rocket science. It’s not even computer science. It’s
+       logic, creativity, and knowing how to use the right tools. It’s something you
+       can learn. And Codebase can help.</p>
+    <p>In our immersive iOS bootcamp in Savannah, Georgia, you’ll learn how to develop
+       apps for iPhone and iPad using Apple’s newest programming language, Swift, in
+       nine weeks. You’ll work hard, you’ll have a blast, and when it’s all over,
+       you’ll have the skills to succeed as a junior iOS developer.</p>
     <h2>How Long?</h2>
     <p>9 weeks, Monday-Friday, 9:30am-5:30pm</p>
     <h2>When?</h2>
@@ -83,14 +88,23 @@
     <h2>How Much?</h2>
     <p>$6,500
     <h2>What Do I Need?</h2>
-    <p>A MacBook that runs MacOS Sierra; a device (iPod Touch, iPhone, iPad) that runs iOS 10. No device necessary, but having one is more fun!</p>
+    <p>A MacBook that runs MacOS Sierra; a device (iPod Touch, iPhone, iPad) that runs
+       iOS 10. No device necessary, but having one is more fun!</p>
     <h2>Why Mobile?</h2>
-    <p>Mobile technology is here to stay. In 2017, the number of people in the United States who own smartphones will surpass the number of people who own computers. [Something about Swift.] Plus…it’s really, really fun.</p>
+    <p>Mobile technology is here to stay. In 2017, the number of people in the United
+       States who own smartphones will surpass the number of people who own computers.
+       [Something about Swift.] Plus…it’s really, really fun.</p>
     <h2>Why Savannah?</h2>
-    <p>The tech community is bubbling up in this gorgeous slice of the South. Thanks to the Savannah College of Art and Design, local creative talent is top-notch — and there’s a lot of room for mobile software developers to get in on the action.</p>
+    <p>The tech community is bubbling up in this gorgeous slice of the South. Thanks to
+       the Savannah College of Art and Design, local creative talent is top-notch — and
+       there’s a lot of room for mobile software developers to get in on the action.</p>
     <h2>Why Codebase?</h2>
-    <p>We’ve taught more than 100 students in an accelerated learning environment, and we’ve learned the best ways to help you succeed. Our instructors are working iOS engineers with a ton of experience (20+ years combined!) — and they’re excited to show you what you REALLY need to know to get started in the field.</p>
-    <p>And who knows? If you stay in Savannah, we may be able to hook you up with your first iOS engineering job at our mobile dev shop, Codebase Labs.</p>
+    <p>We’ve taught more than 100 students in an accelerated learning environment, and
+       we’ve learned the best ways to help you succeed. Our instructors are working iOS
+       engineers with a ton of experience (20+ years combined!) — and they’re excited
+       to show you what you REALLY need to know to get started in the field.</p>
+    <p>And who knows? If you stay in Savannah, we may be able to hook you up with your
+       first iOS engineering job at our mobile dev shop, Codebase Labs.</p>
     <br>
     <a class='button' href='https://codebase.wufoo.com/forms/z4ndbov16yf48a/'>Apply Now!</a>
     <a class='button' href='mailto:hello@codebasesav.com'>Email Us.</a>
