[Something about Swift]

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
     <h2>Why Mobile?</h2>
     <p>Mobile technology is here to stay. In 2017, the number of people in the United
        States who own smartphones will surpass the number of people who own computers.
-       [Something about Swift.] Plus…it’s really, really fun.</p>
+       We’re also huge believers in Apple’s new programming language, Swift, it’s
+       modern, it’s powerful and it’s here to stay. Plus…it’s really, really fun.</p>
     <h2>Why Savannah?</h2>
     <p>The tech community is bubbling up in this gorgeous slice of the South. Thanks to
        the Savannah College of Art and Design, local creative talent is top-notch — and
