Minor copy changes.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         text-justify: inter-word;
       }
       h1 {
-        font-size: 7.3rem;
+        font-size: 7.55rem;
         text-align: center;
         margin: 8vw 0 0 0;
       }
@@ -81,31 +81,38 @@
        apps for iPhone and iPad using Apple’s newest programming language, Swift, in
        nine weeks. You’ll work hard, you’ll have a blast, and when it’s all over,
        you’ll have the skills to succeed as a junior iOS developer.</p>
-    <h2>How Long?</h2>
-    <p>9 weeks, Monday-Friday, 9:30am-5:30pm</p>
-    <h2>When?</h2>
-    <p>June 19 - August 18, no class on Tuesday, July 4</p>
-    <h2>How Much?</h2>
-    <p>$6,500
-    <h2>What Do I Need?</h2>
-    <p>A MacBook that runs MacOS Sierra; a device (iPod Touch, iPhone, iPad) that runs
-       iOS 10. No device necessary, but having one is more fun!</p>
-    <h2>Why Mobile?</h2>
+    <h2>How long will it take?</h2>
+    <p>9 weeks<br>
+      Monday to Friday, 40+ hours per week<br>
+      (Just like a job, only fun!)</p>
+    <h2>When is it?</h2>
+    <p>June 19 - August 18<br>
+      No class on Tuesday, July 4. U-S-A! U-S-A!</p>
+    <h2>How much is tuition?</h2>
+    <p>$6,500<br>
+      A non-refundable deposit of $1,000 secures your place, and the remaining balance is due on the first day of class.<br>
+      (Payable by cash, check or credit card.)
+    <h2>What do I need?</h2>
+    <p>Every good iOS developer needs a MacBook that runs the latest verson of MacOS. (In this case, it's Sierra.)<br>
+      It'll also be handy to have a device (iPhone, iPad, iPod Touch) that runs the latest iOS version (iOS 10).<br>
+      A device isn't necessary, but it's cool to see your apps in action!</p>
+    <h2>Why mobile?</h2>
     <p>Mobile technology is here to stay. In 2017, the number of people in the United
        States who own smartphones will surpass the number of people who own computers.
-       We’re also huge believers in Apple’s new programming language, Swift, it’s
-       modern, it’s powerful and it’s here to stay. Plus…it’s really, really fun.</p>
+       We’re also huge believers in Apple’s new programming language, Swift. It’s
+       modern, it’s powerful and it’s really, really fun.</p>
     <h2>Why Savannah?</h2>
     <p>The tech community is bubbling up in this gorgeous slice of the South. Thanks to
        the Savannah College of Art and Design, local creative talent is top-notch — and
-       there’s a lot of room for mobile software developers to get in on the action.</p>
+       there’s a lot of room for mobile software developers to get in on the action. 
+       Plus, the cost of living is relatively low, which helps us keep tuition affordable.</p>
     <h2>Why Codebase?</h2>
-    <p>We’ve taught more than 100 students in an accelerated learning environment, and
+    <p>We’ve taught mobile development to more than 500 students, and
        we’ve learned the best ways to help you succeed. Our instructors are working iOS
        engineers with a ton of experience (20+ years combined!) — and they’re excited
        to show you what you REALLY need to know to get started in the field.</p>
     <p>And who knows? If you stay in Savannah, we may be able to hook you up with your
-       first iOS engineering job at our mobile dev shop, Codebase Labs.</p>
+       first iOS engineering gig at our mobile dev shop, Codebase Labs.</p>
     <br>
     <a class='button' href='https://codebase.wufoo.com/forms/z4ndbov16yf48a/'>Apply Now!</a>
     <a class='button' href='mailto:hello@codebasesav.com'>Email Us.</a>
